# xKippo-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  fix_deps.sh
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.hive-mind/: hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1756780896181-2o9cm3geb.txt  hive-mind-prompt-swarm-1756843492405-u9c1exa5w.txt  hive-mind-resume-session-1756780896184-5zba6ldox-1756828810894.txt  hive-mind-resume-session-1756780896184-5zba6ldox-1756861098999.txt  session-1756780896184-5zba6ldox-auto-save-1756780926185.json  session-1756843492405-6yy60t36r-auto-save-1756843522406.json
scripts/: fix_deps.sh  install.sh  setup.sh  setup.sh.new  update_deps.sh
src/: app.rs  main.rs
src/app/: config.rs
src/config/: mod.rs  settings.rs
src/core/: alert_engine.rs  enhanced_log_analyzer.rs  log_analyzer.rs  log_watcher.rs  mod.rs  session_manager.rs
src/data/: mod.rs  models.rs  store.rs
src/plugins/: api.rs  built_in.rs  manager.rs  mod.rs
src/ui/: dashboard.rs  geography.rs  help.rs  logs.rs  mod.rs  security.rs  sessions.rs  settings.rs
src/ui/components/: chart.rs  help.rs  ip_map.rs  map.rs  mod.rs  stateful_table.rs
src/utils/: errors.rs  helpers.rs  logger.rs  mod.rs
